--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -174,7 +174,7 @@ td,tr,table{
           position:absolute;
           top:0;
           z-index:1000;
-
+          -webkit-transform:scale(1.5);
         }
         #magnifier:after{
             position:absolute;
@@ -198,20 +198,22 @@ td,tr,table{
             border-bottom-right-radius: 1px;
         }
             #head{
-                position:absolute;
-                top:0;
-                left:0;
+                top:20px;
+                left:20px;
+                position:relative;
                 z-index:1000;
             }
             #logo{
-                position:relative;
-                left:15px;
+                position:absolute;
                 width:46px;
                 height:46px;
-                top:20px;
                 z-index:1000;
             }
-            .other-wrap{
+            #logo.click{
+                -webkit-animation: jellyAnimation 1000ms linear;
+                -webkit-animation-fill-mode: forwards;
+            }
+            .nav-wrap{
                 bottom:100%;text-align:center;-webkit-transition:all 0.5s ease-out;-webkit-box-flex:1;position:absolute;
                 visibility:hidden;
                 opacity:0.1;
@@ -224,22 +226,35 @@ td,tr,table{
                 -webkit-transform:perspective(100px) rotateZ(150deg) rotateY(0deg);
                 opacity:0.01;
             }
-            .other-wrap.show{
+            .nav-wrap.show{
                 visibility:visible;opacity:1;
             }
-            .other-wrap.volunteer.show{
+            .nav-wrap.show:nth-child(5){
                 -webkit-transform:rotateZ(15deg);
+                -webkit-transition-delay:0.05s;
                 z-index:998;
             }
-            .other-wrap.about.show{
+            .nav-wrap.show:nth-child(6){
                 -webkit-transform:rotateZ(30deg);
+                -webkit-transition-delay:0.10s;
                 z-index:997;
             }
-            .other-wrap.help.show{
+            .nav-wrap.show:nth-child(7){
                 -webkit-transform:rotateZ(45deg);
+                -webkit-transition-delay:0.15s;
                 z-index:996;
             }
-            .other-stick{width:200px;height:34px;border:0;padding:0 24px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.9);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;text-align:end;}
+            .nav-wrap.show:nth-child(8){
+                -webkit-transform:rotateZ(60deg);
+                -webkit-transition-delay:0.20s;
+                z-index:995;
+            }
+            .nav-wrap.show:nth-child(9){
+                -webkit-transform:rotateZ(75deg);
+                -webkit-transition-delay:0.25s;
+                z-index:994;
+            }
+            .nav-stick{width:200px;height:34px;border:0;padding:0 24px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.9);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;text-align:end;}
             #result-wrap,#introduction-wrap{
                 bottom:100%;text-align:center;-webkit-transition:all 0.5s ease-out;-webkit-box-flex:1;position:absolute;
                 visibility:hidden;
@@ -258,6 +273,7 @@ td,tr,table{
                 -webkit-box-align:center;
             }
             #introduction-wrap.show{
+                -webkit-transition-delay:0.4s;
                 visibility:visible;opacity:1;-webkit-transform:rotateZ(60deg);
                 display:-webkit-box;
                 -webkit-box-align:center;
@@ -373,7 +389,6 @@ td,tr,table{
             .result-video{
                 box-sizing:border-box;
                 -webkit-box-align:center;
-                overflow:hidden;
                 min-height:46px;
                 display:-webkit-box;
                 margin:3px 0 7px 0;
@@ -386,26 +401,44 @@ td,tr,table{
                 position:relative;
                 padding:6px;
                 border-radius:3px;
+                background-size:100%;
+            }
+            .result-video.playing{
+                background-image:none!important;
+            }
+            .options{
+                position:absolute;
+                width:56px;
+                height:30px;
+                line-height:30px;
+                right:0;
+                top:0;
             }
             .result-video:nth-child(even){
                 background-color:#DEDEDE;
             }
             .video-info{
+                word-break:break-all;
+                text-shadow:0px 0px 5px #000;
                 -webkit-box-flex:1;
             }
             #search-wrap{
-                text-align:center;
                 -webkit-transition:all 0.4s ease-out;
                 -webkit-box-flex:1;
-                position:absolute;
+                position:relative;
                 z-index:999;
                 left:23px;
                 display:-webkit-box;
                 -webkit-box-align:center;
+                -webkit-box-pack:start;
                 height:46px;
+                width:calc(100% - 62px);
                 -webkit-transform-origin-x:0;
                 -webkit-transform:perspective(100px) rotateZ(-90deg) rotateY(0deg);
                 opacity:0.01;
+            }
+            .input-wrap{
+                -webkit-box-flex:1;
             }
             #search-wrap.show{
                 -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg);
@@ -416,10 +449,11 @@ td,tr,table{
                 opacity:0.2;
             }
             #search{
-                min-width:60px;
+                width:100%;
                 height:34px;
                 border:0;
                 margin:0;
+                -webkit-box-flex:1;
                 padding:0 10px 0 33px;
                 border-radius:0 3px 3px 0;
                 background:rgba(0,0,0,0.3);
@@ -428,7 +462,6 @@ td,tr,table{
                 font-size:15px;
                 text-shadow:0px 0px 3px #404040;
                 color:#ddd;
-                position:relative;
             }
             #search-wrap.showbtn #search{
                 padding:0 50px 0 33px;
@@ -565,3 +598,76 @@ td,tr,table{
 .result-audio .play-pauseZ{
     margin: 0 15px 0 0px;
 }
+
+@-webkit-keyframes jellyAnimation { 
+ 0% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  3.4% { -webkit-transform: matrix3d(0.744, 0, 0, 0, 0, 0.724, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.744, 0, 0, 0, 0, 0.724, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  4.3% { -webkit-transform: matrix3d(0.756, 0, 0, 0, 0, 0.716, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.756, 0, 0, 0, 0, 0.716, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  4.7% { -webkit-transform: matrix3d(0.761, 0, 0, 0, 0, 0.711, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.761, 0, 0, 0, 0, 0.711, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  6.81% { -webkit-transform: matrix3d(0.776, 0, 0, 0, 0, 0.677, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.776, 0, 0, 0, 0, 0.677, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  8.61% { -webkit-transform: matrix3d(0.776, 0, 0, 0, 0, 0.647, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.776, 0, 0, 0, 0, 0.647, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  9.41% { -webkit-transform: matrix3d(0.772, 0, 0, 0, 0, 0.635, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.772, 0, 0, 0, 0, 0.635, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  10.21% { -webkit-transform: matrix3d(0.766, 0, 0, 0, 0, 0.625, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.766, 0, 0, 0, 0, 0.625, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  12.91% { -webkit-transform: matrix3d(0.738, 0, 0, 0, 0, 0.611, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.738, 0, 0, 0, 0, 0.611, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  13.61% { -webkit-transform: matrix3d(0.729, 0, 0, 0, 0, 0.612, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.729, 0, 0, 0, 0, 0.612, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  14.11% { -webkit-transform: matrix3d(0.723, 0, 0, 0, 0, 0.614, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.723, 0, 0, 0, 0, 0.614, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  17.22% { -webkit-transform: matrix3d(0.687, 0, 0, 0, 0, 0.642, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.687, 0, 0, 0, 0, 0.642, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  17.52% { -webkit-transform: matrix3d(0.683, 0, 0, 0, 0, 0.646, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.683, 0, 0, 0, 0, 0.646, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  18.72% { -webkit-transform: matrix3d(0.672, 0, 0, 0, 0, 0.661, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.672, 0, 0, 0, 0, 0.661, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  21.32% { -webkit-transform: matrix3d(0.654, 0, 0, 0, 0, 0.694, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.654, 0, 0, 0, 0, 0.694, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  24.32% { -webkit-transform: matrix3d(0.647, 0, 0, 0, 0, 0.722, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.647, 0, 0, 0, 0, 0.722, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  25.23% { -webkit-transform: matrix3d(0.647, 0, 0, 0, 0, 0.728, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.647, 0, 0, 0, 0, 0.728, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  28.33% { -webkit-transform: matrix3d(0.657, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.657, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  29.03% { -webkit-transform: matrix3d(0.66, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.66, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  29.93% { -webkit-transform: matrix3d(0.665, 0, 0, 0, 0, 0.733, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.665, 0, 0, 0, 0, 0.733, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  35.54% { -webkit-transform: matrix3d(0.698, 0, 0, 0, 0, 0.71, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.698, 0, 0, 0, 0, 0.71, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  36.74% { -webkit-transform: matrix3d(0.704, 0, 0, 0, 0, 0.705, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.704, 0, 0, 0, 0, 0.705, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  39.44% { -webkit-transform: matrix3d(0.713, 0, 0, 0, 0, 0.696, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.713, 0, 0, 0, 0, 0.696, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  41.04% { -webkit-transform: matrix3d(0.716, 0, 0, 0, 0, 0.692, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.716, 0, 0, 0, 0, 0.692, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  44.44% { -webkit-transform: matrix3d(0.717, 0, 0, 0, 0, 0.689, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.717, 0, 0, 0, 0, 0.689, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  52.15% { -webkit-transform: matrix3d(0.704, 0, 0, 0, 0, 0.698, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.704, 0, 0, 0, 0, 0.698, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  59.86% { -webkit-transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  61.66% { -webkit-transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  63.26% { -webkit-transform: matrix3d(0.696, 0, 0, 0, 0, 0.702, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.696, 0, 0, 0, 0, 0.702, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  75.28% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.699, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.699, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  83.98% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  85.49% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  90.69% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  100% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+}
+
+@keyframes animation { 
+  0% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  3.4% { -webkit-transform: matrix3d(0.744, 0, 0, 0, 0, 0.724, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.744, 0, 0, 0, 0, 0.724, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  4.3% { -webkit-transform: matrix3d(0.756, 0, 0, 0, 0, 0.716, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.756, 0, 0, 0, 0, 0.716, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  4.7% { -webkit-transform: matrix3d(0.761, 0, 0, 0, 0, 0.711, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.761, 0, 0, 0, 0, 0.711, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  6.81% { -webkit-transform: matrix3d(0.776, 0, 0, 0, 0, 0.677, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.776, 0, 0, 0, 0, 0.677, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  8.61% { -webkit-transform: matrix3d(0.776, 0, 0, 0, 0, 0.647, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.776, 0, 0, 0, 0, 0.647, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  9.41% { -webkit-transform: matrix3d(0.772, 0, 0, 0, 0, 0.635, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.772, 0, 0, 0, 0, 0.635, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  10.21% { -webkit-transform: matrix3d(0.766, 0, 0, 0, 0, 0.625, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.766, 0, 0, 0, 0, 0.625, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  12.91% { -webkit-transform: matrix3d(0.738, 0, 0, 0, 0, 0.611, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.738, 0, 0, 0, 0, 0.611, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  13.61% { -webkit-transform: matrix3d(0.729, 0, 0, 0, 0, 0.612, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.729, 0, 0, 0, 0, 0.612, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  14.11% { -webkit-transform: matrix3d(0.723, 0, 0, 0, 0, 0.614, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.723, 0, 0, 0, 0, 0.614, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  17.22% { -webkit-transform: matrix3d(0.687, 0, 0, 0, 0, 0.642, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.687, 0, 0, 0, 0, 0.642, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  17.52% { -webkit-transform: matrix3d(0.683, 0, 0, 0, 0, 0.646, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.683, 0, 0, 0, 0, 0.646, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  18.72% { -webkit-transform: matrix3d(0.672, 0, 0, 0, 0, 0.661, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.672, 0, 0, 0, 0, 0.661, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  21.32% { -webkit-transform: matrix3d(0.654, 0, 0, 0, 0, 0.694, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.654, 0, 0, 0, 0, 0.694, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  24.32% { -webkit-transform: matrix3d(0.647, 0, 0, 0, 0, 0.722, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.647, 0, 0, 0, 0, 0.722, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  25.23% { -webkit-transform: matrix3d(0.647, 0, 0, 0, 0, 0.728, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.647, 0, 0, 0, 0, 0.728, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  28.33% { -webkit-transform: matrix3d(0.657, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.657, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  29.03% { -webkit-transform: matrix3d(0.66, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.66, 0, 0, 0, 0, 0.735, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  29.93% { -webkit-transform: matrix3d(0.665, 0, 0, 0, 0, 0.733, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.665, 0, 0, 0, 0, 0.733, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  35.54% { -webkit-transform: matrix3d(0.698, 0, 0, 0, 0, 0.71, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.698, 0, 0, 0, 0, 0.71, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  36.74% { -webkit-transform: matrix3d(0.704, 0, 0, 0, 0, 0.705, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.704, 0, 0, 0, 0, 0.705, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  39.44% { -webkit-transform: matrix3d(0.713, 0, 0, 0, 0, 0.696, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.713, 0, 0, 0, 0, 0.696, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  41.04% { -webkit-transform: matrix3d(0.716, 0, 0, 0, 0, 0.692, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.716, 0, 0, 0, 0, 0.692, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  44.44% { -webkit-transform: matrix3d(0.717, 0, 0, 0, 0, 0.689, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.717, 0, 0, 0, 0, 0.689, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  52.15% { -webkit-transform: matrix3d(0.704, 0, 0, 0, 0, 0.698, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.704, 0, 0, 0, 0, 0.698, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  59.86% { -webkit-transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  61.66% { -webkit-transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.696, 0, 0, 0, 0, 0.703, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  63.26% { -webkit-transform: matrix3d(0.696, 0, 0, 0, 0, 0.702, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.696, 0, 0, 0, 0, 0.702, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  75.28% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.699, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.699, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  83.98% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  85.49% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  90.69% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+  100% { -webkit-transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.7, 0, 0, 0, 0, 0.7, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } }
