--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -82,6 +82,7 @@ td,tr,table{
     width:100%;
     height:100%;
     z-index:500;
+    //-webkit-transform:scale(0.7);
     visibility:hidden;
     display:-webkit-box;
     -webkit-box-align:center;
@@ -104,10 +105,13 @@ td,tr,table{
 }
 #music-details.show{
     visibility:visible;
+    //-webkit-animation:jellyAnimation 700ms linear;
+    //-webkit-animation-fill-mode: forwards;
 }
 #music-details.show #music-wrap{
     opacity:1;
-    -webkit-transform:scale(1) translateY(-30px);
+    //-webkit-transform:scale(1.5) translateY(-30px);
+    -webkit-transform:scale(1.0) translateY(-30px);
 }
 #music-album{
     display:inline-block;
