--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -258,7 +258,7 @@ td,tr,table{
                 -webkit-transition-delay:0.25s;
                 z-index:994;
             }
-            .nav-stick{width:200px;height:34px;border:0;padding:0 24px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.9);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#ddd;text-shadow:0px 0px 3px #404040;text-align:end;}
+            .nav-stick{width:200px;height:34px;border:0;padding:0 24px 0 17px;margin:0;border-radius:0 3px 3px 0;background:rgba(193,193,193,0.9);box-shadow:0px 0px 6px rgba(0,0,0,0.3);line-height:35px;font-size:15px;color:#fff;text-shadow:0px 0px 3px #404040;text-align:end;}
             #result-wrap,#introduction-wrap{
                 bottom:100%;text-align:center;-webkit-transition:all 0.5s ease-out;-webkit-box-flex:1;position:absolute;
                 visibility:hidden;
