--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -378,11 +378,15 @@ td,tr,table{
                 color:#fdfdfd;
                 text-shadow:0px 0px 3px #666;
                 background-color:rgba(150,150,150,1);
-                padding:6px;
                 border-radius:3px;
             }
-            .result-audio:nth-child(even){
-                background-color:#DEDEDE;
+            .result-audio-title{
+                background-color:#dedede;
+                box-shadow:0px 3px 2px #666;
+                border:3px 3px 0 0;
+                width:100%;
+                height:30px;
+                line-height:30px;
             }
             .audio-info{
                 -webkit-box-flex:1;
@@ -594,10 +598,9 @@ td,tr,table{
 }
 
 .result-audio .audiojsZ{
-    width:100%;
+    width:90%;
     position:inherit;
-    margin-top:5px;
-    margin-bottom:0;
+    padding-bottom:10px;
 }
 .result-audio .play-pauseZ{
     margin: 0 15px 0 0px;
