--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -469,7 +469,7 @@ td,tr,table{
                 line-height:35px;
                 font-size:15px;
                 text-shadow:0px 0px 3px #404040;
-                color:#ddd;
+                color:#fff;
             }
             #search-wrap.showbtn #search{
                 padding:0 50px 0 33px;
