--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -411,16 +411,20 @@ td,tr,table{
                 border-radius:3px;
                 background-size:100%;
             }
+            .video-source{
+                position:absolute;
+                z-index:10;
+                top:10px;
+                left:10px;
+                text-decoration:underline;
+            }
+            @media only screen and (min-width: 400px) {
+                .result-video{
+                    height:300px;
+                }
+            }
             .result-video.playing{
                 background-image:none!important;
-            }
-            .options{
-                position:absolute;
-                width:56px;
-                height:30px;
-                line-height:30px;
-                right:0;
-                top:0;
             }
             .result-video:nth-child(even){
                 background-color:#DEDEDE;
@@ -456,7 +460,7 @@ td,tr,table{
                 -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg);
                 opacity:0.2;
             }
-            #search{
+            #input-search{
                 width:100%;
                 height:34px;
                 border:0;
@@ -471,7 +475,7 @@ td,tr,table{
                 text-shadow:0px 0px 3px #404040;
                 color:#fff;
             }
-            #search-wrap.showbtn #search{
+            #search-wrap.showbtn #input-search{
                 padding:0 50px 0 33px;
             }
             #btn-search{
@@ -491,10 +495,10 @@ td,tr,table{
             #search-wrap.showbtn #btn-search{
                 visibility:visible;
             }
-            #search::-webkit-input-placeholder{
+            #input-search::-webkit-input-placeholder{
                 color:rgba(255,255,255,0.8);
             }
-            #search.focus{-webkit-animation:none;}
+            #input-search.focus{-webkit-animation:none;}
             #__getwidth{visibility:hidden;position:absolute;}
 
             .tabs{
